--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -10,16 +10,17 @@
 
 | 接口名称           | 输入参数                                                     | 输出参数                                                                               | 备注                                                              |
 | :----------------- | :----------------------------------------------------------- | :------------------------------------------------------------------------------------- | :---------------------------------------------------------------- |
-| login              | email, pswd_hash                                             | user_id, session_id, status                                                            | pswd_hash是32位char                                               |
-| register           | email, pswd_hash, user_name, gender, resident_city_id        | user_id, status                                                                        | status=存在 or 注册成功                                           |
+| login              | email, pswd_hash                                             | user_id, session_id, status                                                            | pswd_hash 是32位 char                                               |
+| register           | email, pswd_hash, user_name, gender, resident_city_id        | user_id, status                                                                        | status = 存在 or 注册成功                                           |
 | logout             | user_id, session_id                                          | status                                                                                 |                                                                   |
-| get_user_info      | user_id, session_id                                          | user_name, email, gender, resident_city_id, comment, status                            | comment是个性化签名                                               |
+| get_user_info      | user_id, session_id                                          | user_name, email, gender, resident_city_id, comment, status                            | comment 是个性化签名                                               |
 | set_user_info      | user_id, user_name, email, gender, resident_city_id, comment | status                                                                                 |                                                                   |
-| change_password    | user_id, session_id, old_pswd_hash, new_pswd_hash            | status                                                                                 |                                                                   |
+| reset_password     | user_id, session_id, old_pswd_hash, new_pswd_hash            | status                                                                                 |                                                                   |
 | get_friend_msg     | user_id, session_id                                          | count, [friend_msg_id, friend_user_id, msg_type, msg_content], status                  | 返回用户所有的好友消息（加好友/删好友）                           |
 | respond_friend_msg | user_id, session_id, friend_msg_id                           |                                                                                        | 删除用户处理过的好友消息                                          |
 | get_travel_msg     | user_id, session_id                                          | count, [travel_msg_id, friend_user_id,friend_travel_id, msg_type, msg_content], status | 返回用户所有的行程关联消息（加入行程/离开行程/修改行程/删除行程） |
 | respond_travel_msg | user_id, session_id, travel_msg_id                           |                                                                                        | 删除用户处理过的行程关联消息                                      |
++ 注：用户每次操作后台会更新用户的 `last_action_time`，若用户连续10分钟无操作，即前端连续10分钟未访问除 city 外的 api，则后台自动删除用户 session，若10分钟后再次访问接口则会 raise UserSessionTimeoutException
 
 ---
 
@@ -34,7 +35,7 @@
 | set_travel_group_info   | user_id, session_id, travel_group_id, travel_group_note                                | status                                                                       |                               |
 | add_travel_group        | user_id, session_id                                                                    | travel_group_id, status                                                      |                               |
 | remove_travel_group     | user_id, session_id, travel_group_id                                                   | status                                                                       |                               |
-| get_travel_info         | user_id, session_id, travel_id                                                         | city_id, date_start, date_end, visibility, travel_note, status               | date 格式？                   |
+| get_travel_info         | user_id, session_id, travel_id                                                         | city_id, date_start, date_end, visibility, travel_note, status               | date 格式 "yyyy-mm-dd"                   |
 | set_travel_info         | user_id, session_id, travel_id, city_id, date_start, date_end, visibility, travel_note | status                                                                       |
 | add_travel              | user_id, session_id, travel_group_id                                                   | travel_id, status                                                            |                               |
 | remove_travel           | user_id, session_id, travel_group_id, travel_id                                        | status                                                                       |                               |
