--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -77,7 +77,7 @@
 |   √   | get_friend_list                     | user_id, session_id                               | count, [friend_list], status                                                                                                                                | friend_list 内含好友 user_id                                                                                                                    |
 |   √   | set_friend_note                     | user_id, session_id, friend_user_id, friend_note  | status                                                                                                                                                      | friend_note 如果为空串则后端自动设为 friend_user_name                                                                                           |
 |   √   | get_friend_user_info                | user_id, session_id, friend_user_id               | user_id, user_name, gender, resident_city_id, resident_city: {city_id, city_name, ...}, comment, avatar_url, friend_note, status                            |                                                                                                                                                 |
-|   √   | get_others_user_info                | user_id, session_id, other_user_id                | user_id, user_name, (friend_note,) gender, resident_city_id, resident_city: {city_id, city_name, ...}, avatar_url, comment, is_friend, status               |                                                                                                                                                 |
+|   √   | get_others_user_info                | user_id, session_id, others_user_id               | user_id, user_name, (friend_note,) gender, resident_city_id, resident_city: {city_id, city_name, ...}, avatar_url, comment, is_friend, status               |                                                                                                                                                 |
 |   √   | get_others_all_travel_group_details | user_id, session_id                               | count, [travel_group_info_list: {owner_user_id, travel_group_name, travel_group_note, travel_group_color, travel_infos: {count, travel_info_list}}], status | color 是 7 位 char (#FFFFFF)                                                                                                                    |
 |   √   | get_others_travel_group_list        | user_id, session_id, other_user_id                | count, [travel_group_list], status                                                                                                                          | 只返回内部有可见 travel 的 travel group, travel_group_list 内含 travel_group_id                                                                 |
 |   √   | get_others_travel_group_info_list   | user_id, session_id, other_user_id                | count, [travel_group_info_list: {travel_group_id, owner_user_id, ...}], status                                                                              | 只返回内部有可见 travel 的 travel group                                                                                                         |
